--- a/style/style.css
+++ b/style/style.css
@@ -445,7 +445,7 @@ html {
   text-indent: 30px;
 }
 
-.about_detail__text>span {
+.about_detail__text > span {
   font-size: 18px;
   color: rgb(11, 70, 126);
 }
@@ -692,9 +692,8 @@ html {
   padding-left: 40px;
   padding-bottom: 51px;
   /* border: 1px solid rgb(255, 255, 255); */
-  background-image: url("/images/bg_form.png");
+  background-image: url("./images/bg_form.png");
 }
-
 
 .help__title {
   margin-bottom: 40px;
@@ -998,10 +997,12 @@ html {
   align-items: center;
   justify-content: flex-start;
   /* border: 1px solid green; */
-  background: linear-gradient(270deg,
-      rgb(55, 63, 97),
-      rgb(68, 79, 124) 50.09%,
-      rgb(55, 63, 97) 99.586%);
+  background: linear-gradient(
+    270deg,
+    rgb(55, 63, 97),
+    rgb(68, 79, 124) 50.09%,
+    rgb(55, 63, 97) 99.586%
+  );
 }
 
 .credo__pic {
