--- a/style/style.css
+++ b/style/style.css
@@ -692,7 +692,7 @@ html {
   padding-left: 40px;
   padding-bottom: 51px;
   /* border: 1px solid rgb(255, 255, 255); */
-  background-image: url("/images/bg_form.png");
+  background-image: url("images/bg_form.png");
 }
 
 .help__title {
