--- a/style/style.css
+++ b/style/style.css
@@ -169,6 +169,10 @@ html {
   /* border:1px solid green; */
 }
 
+.logo__img {
+  max-width: 100%;
+}
+
 .header_navigate {
   margin-left: 60px;
   /* border:1px solid brown; */
@@ -304,9 +308,21 @@ html {
 
 /* .about__left {} */
 
-.top__pic {
+.about__pic {
   display: block;
+  position: relative;
   margin-bottom: 26px;
+}
+
+.about__pic::before {
+  content: url("/images/icons/btn_play.png");
+  position: absolute;
+  top: 42%;
+  left: 48%;
+}
+
+.about__pic:hover {
+  cursor: pointer;
 }
 
 .top__image {
@@ -445,7 +461,7 @@ html {
   text-indent: 30px;
 }
 
-.about_detail__text > span {
+.about_detail__text>span {
   font-size: 18px;
   color: rgb(11, 70, 126);
 }
@@ -480,6 +496,7 @@ html {
   column-gap: 225px;
   row-gap: 71px;
   justify-content: center;
+  justify-items: center;
   margin-bottom: 71px;
 }
 
@@ -539,6 +556,10 @@ html {
   list-style: none;
   background-color: rgb(253, 245, 223);
   border-radius: 25px;
+}
+
+.all_img {
+  width: 100%;
 }
 
 .all_help_card__descript {
@@ -997,12 +1018,10 @@ html {
   align-items: center;
   justify-content: flex-start;
   /* border: 1px solid green; */
-  background: linear-gradient(
-    270deg,
-    rgb(55, 63, 97),
-    rgb(68, 79, 124) 50.09%,
-    rgb(55, 63, 97) 99.586%
-  );
+  background: linear-gradient(270deg,
+      rgb(55, 63, 97),
+      rgb(68, 79, 124) 50.09%,
+      rgb(55, 63, 97) 99.586%);
 }
 
 .credo__pic {
@@ -1306,9 +1325,10 @@ html {
   background-color: #f1ead6;
 }
 
-/* .footer_logo{
-  max-height: 110px;
-} */
+.footer_logo {
+  max-width: 100%;
+}
+
 .footer_social {
   margin-left: 0;
 }
@@ -1345,4 +1365,119 @@ html {
   font-size: 16px;
   font-weight: 400;
   line-height: 19.5px;
+}
+
+@media screen and (max-width: 1524px) {
+
+  .header_navigate__list,
+  .footer_navigate__list {
+    flex-wrap: wrap;
+    gap: 20px;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .header_bottom {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 1050px) {
+  .reviews_card__block {
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .container {
+    padding: 10px;
+  }
+
+  .header_phone,
+  .social_wrapp,
+  .top,
+  .top__nav,
+  .about,
+  .direct_card,
+  .price_wrapp,
+  .reviews_card__block,
+  .credo,
+  .footer_top,
+  .article,
+  .about_detail {
+    flex-wrap: wrap;
+    gap: 20px;
+  }
+
+  .top__link {
+    margin-left: 20px;
+  }
+
+  .top__pic,
+  .direct_card__picture {
+    order: -1;
+  }
+
+  .title {
+    font-size: 30px;
+  }
+
+  .form__input_tel {
+    margin-left: 0px;
+  }
+
+  .credo_wrapp {
+    margin-left: 0px;
+  }
+
+  .credo__description {
+    text-align: center;
+  }
+
+  .credo__description::before,
+  .credo__description::after {
+    content: "";
+  }
+
+  .blogs_wrapp {
+    flex-direction: column;
+    margin-bottom: 20px;
+  }
+
+  .footer_navigate {
+    margin-bottom: 20px;
+  }
+
+  .article {
+    max-width: 600px;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: 30px;
+    flex-grow: 1;
+    background-color: rgb(241, 234, 214);
+    gap: 20px;
+    padding-left: 30px;
+    padding-bottom: 60px;
+  }
+
+  .small {
+    max-height: none;
+    border-bottom-left-radius: 0px;
+    border-top-right-radius: 25px;
+  }
+
+  .all_help_card {
+    flex-wrap: wrap;
+  }
+
+  .all_reviews {
+    margin: 20px;
+    flex-wrap: wrap;
+  }
+
+  .article_card {
+    flex-wrap: wrap;
+  }
 }
