--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ html {
 
 .container {
   max-width: 1920px;
-  min-width: 400px;
+  min-width: 350px;
   margin: 0px auto;
   /* min-height: 100vh; */
   /* border: 1px solid grey; */
@@ -94,17 +94,14 @@ html {
   justify-content: space-between;
   padding: 1.25rem 0rem;
   background-color: rgb(253, 245, 223);
-  /* border:1px solid blue; */
 }
-
-.social_wrapp {
+.header_top .social_wrapp {
   margin-left: 5.62rem;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 1.25rem;
 }
-
 .header_top__link {
   margin-left: 1.87rem;
   text-decoration: none;
@@ -114,29 +111,27 @@ html {
   font-weight: 400;
   line-height: 1.25rem;
 }
-
-.header_phone,
-.footer_phone {
+.header_top__social_link {
+  transform: translateY(-2px);
+}
+.header_top .header_phone {
   margin-right: 8.125rem;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 1.25rem;
 }
-
-.phone_link {
+.header_top .header_phone_link {
   text-decoration: none;
 }
-
-.phone_text {
+.header_top .header_phone_text {
   color: rgb(234, 182, 92);
   font-family: "Montserrat-Regular", sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.25rem;
 }
-
-.phone_number {
+.header_top .header_phone_number {
   margin-left: 1.25rem;
   text-decoration: none;
   color: rgb(52, 52, 52);
@@ -145,34 +140,23 @@ html {
   font-weight: 400;
   line-height: 1.25rem;
 }
-
-.header_top__social_link:hover {
-  transform: translateY(-2px);
-}
-
 .header_bottom {
   display: flex;
   justify-content: flex-start;
   align-items: center;
   box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.25);
 }
-
-.header_navigate {
+.header_bottom .header_navigate {
   margin-left: 3.75rem;
 }
-
-.header_navigate__list {
+.header_bottom .header_navigate__list {
   display: flex;
   gap: 5.5rem;
 }
-
-.header_navigate__item,
-.footer_navigate__item {
+.header_bottom .header_navigate__item {
   list-style: none;
 }
-
-.header_navigate__link,
-.footer_navigate__link {
+.header_bottom .header_navigate__link {
   position: relative;
   text-decoration: none;
   color: rgb(52, 52, 52);
@@ -180,10 +164,8 @@ html {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.25rem;
-  /* border:1px solid goldenrod; */
 }
-
-.header_navigate__link::after {
+.header_bottom .header_navigate__link::after {
   content: "";
   display: block;
   position: absolute;
@@ -195,9 +177,114 @@ html {
   opacity: 0;
   transition: 0.3s;
 }
-
-.header_navigate__link:hover:after {
+.header_bottom .header_navigate__link:hover::after {
   opacity: 1;
+}
+.header_bottom .hamb {
+  display: none;
+}
+.header .popup {
+  display: none;
+}
+@media (max-width: 1300px) {
+  .header .header_top {
+    flex-wrap: wrap;
+    gap: 1.25rem;
+    padding-left: 20px;
+  }
+  .header .social_wrapp {
+    margin-left: 0rem;
+    flex-wrap: wrap;
+  }
+  .header .header_phone {
+    margin-right: 0rem;
+    flex-wrap: wrap;
+  }
+  .header .header_navigate__list {
+    flex-wrap: wrap;
+    gap: 1rem;
+  }
+}
+@media (max-width: 1000px) {
+  .header .header_bottom {
+    position: relative;
+    justify-content: space-between;
+  }
+  .header .header_navigate .header_navigate__list {
+    flex-wrap: nowrap;
+    display: none;
+  }
+  .header .hamb {
+    display: flex;
+    align-items: center;
+  }
+  .header .hamb__field {
+    padding: 10px 20px;
+    background-color: white;
+  }
+  .header .bar {
+    display: block;
+    width: 30px;
+    height: 3px;
+    margin: 6px auto;
+    background-color: rgb(234, 182, 92);
+    transition: 0.2s;
+  }
+  .header .popup {
+    position: absolute;
+    top: 95px;
+    left: -100%;
+    width: 100%;
+    padding-top: 20px;
+    background-color: #ffffff;
+    z-index: 100;
+    display: flex;
+    transition: 0.3s;
+  }
+  .header .popup.open {
+    left: 0;
+  }
+  .header .popup .header_navigate__list {
+    width: 100%;
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    overflow: auto;
+  }
+  .header .popup .menu > .header_navigate__item {
+    width: 100%;
+  }
+  .header .popup .header_navigate__link {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding: 20px 0;
+    font-size: 20px;
+    font-weight: bold;
+    color: rgb(52, 52, 52);
+  }
+  .header .popup .header_navigate__link:hover {
+    background-color: rgba(122, 82, 179, 0.1);
+  }
+  .header .hamb__field.active .bar:nth-child(2) {
+    opacity: 0;
+  }
+  .header .hamb__field.active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+  }
+  .header .hamb__field.active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+  }
+  .header body.noscroll {
+    overflow: hidden;
+  }
+}
+@media (max-width: 620px) {
+  .header .logo__img {
+    width: 200px;
+  }
 }
 
 .top {
@@ -1239,6 +1326,28 @@ html {
   align-items: center;
   padding-bottom: 3rem;
   background-color: rgb(253, 245, 223);
+}
+
+.footer_navigate__item {
+  list-style: none;
+}
+
+.footer_navigate__link {
+  position: relative;
+  text-decoration: none;
+  color: rgb(52, 52, 52);
+  font-family: "Montserrat-Regular", sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.25rem;
+}
+
+.footer_phone {
+  margin-right: 8.125rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.25rem;
 }
 
 .footer_social {
