--- a/style/_about.scss
+++ b/style/_about.scss
@@ -5,79 +5,96 @@
 .about {
     display: flex;
     gap: 9.25rem;
-    margin-bottom: 6.43rem;
+    margin-bottom: 6rem;
+
+    &__left_text {
+      color: $black-color;
+      font-family: "Montserrat-Regular", sans-serif;
+      font-size: 1.125rem;
+      font-weight: 400;
+      line-height: 1.875rem;
+    }
+
+    &_right {
+      max-width: 42rem;
+
+      &__header {
+        margin-bottom: 2.3125rem;
+        color: $black-color;
+        font-family: "Montserrat-Medium", sans-serif;
+        font-size: 2.25rem;
+        font-weight: 500;
+        line-height: 1.875rem;
+      }
+
+      &__description {
+        margin-bottom: 1.6875rem;
+        color: $black-color;
+        font-family: "Montserrat-Regular", sans-serif;
+        font-size: 1.125rem;
+        font-weight: 400;
+        line-height: 1.875rem;;
+      }
+
+      &__list {
+        margin-bottom: 7.5rem;
+        list-style: none;
+
+        &_item{
+          margin-bottom: 1.125rem;
+          padding-left: 2.5rem;
+          position: relative;
+          color: $black-color;
+          font-family: "Montserrat-Regular", sans-serif;
+          font-size: 1,125rem;
+          font-weight: 400;
+          line-height: 2rem;
+        }
+        &_item::before{
+          content: url("../images/icons/marker-24.png");
+          position: absolute;
+          left: 0rem;
+          top: 0.25rem
+        }
+      }
+
+      &__link {
+        text-decoration: none;
+        color: $orange-color;
+        font-family: "Montserrat-SemiBold", sans-serif;
+        font-size: 1rem;
+        font-weight: 600;
+        line-height: 1.9rem;
+      }
+    }
+
+    @media (max-width:1000px) {
+      &{
+        gap:2rem;
+      }
+    }
+    @media (max-width:620px) {
+      &{
+        flex-direction: column;
+        margin-bottom: 3rem;
+
+        &_right__link{
+          display: block;
+          text-align: center;
+        }
+        &_right__list{
+          margin-bottom: 2.5rem;
+        }
+      }
+    }
   }  
-  .top__pic {
-    display: block;
-    margin-bottom: 1.625rem;
-  }
+
   
-  .top__image {
-    width: 100%;
-    object-fit: fill;
-  }
+
   
-  .about__left_text {
-    color: $black-color;
-    font-family: "Montserrat-Regular", sans-serif;
-    font-size: 1.125rem;
-    font-weight: 400;
-    line-height: 1.875rem;
-  }
+
   
-  .about_right {
-    max-width: 42rem;
-  }
-  
-  .about__header {
-    margin-bottom: 2.3125rem;
-    color: $black-color;
-    font-family: "Montserrat-Medium", sans-serif;
-    font-size: 2.25rem;
-    font-weight: 500;
-    line-height: 1.875rem;
-  }
-  
-  .about__description {
-    margin-bottom: 1.6875rem;
-    color: $black-color;
-    font-family: "Montserrat-Regular", sans-serif;
-    font-size: 1.125rem;
-    font-weight: 400;
-    line-height: 1.875rem;;
-  }
-  
-  .about__list {
-    margin-bottom: 7.5rem;
-    list-style: none;
-  }
-  
-  .about__item {
-    margin-bottom: 1.125rem;
-    padding-left: 2.5rem;
-    position: relative;
-    color: $black-color;
-    font-family: "Montserrat-Regular", sans-serif;
-    font-size: 1,125rem;
-    font-weight: 400;
-    line-height: 2rem;
-  }
-  
-  .about__item::before {
-    content: url("../images/icons/marker-24.png");
-    position: absolute;
-    left: 0rem;
-    top: 0.25rem;
-  }
-  
-  .about__link {
-    text-decoration: none;
-    color: $orange-color;
-    font-family: "Montserrat-SemiBold", sans-serif;
-    font-size: 1rem;
-    font-weight: 600;
-    line-height: 1.9rem;
-  }
+
   
   
   
