--- a/style/_credo.scss
+++ b/style/_credo.scss
@@ -3,8 +3,7 @@
 
 .credo {
     max-height: 41.7rem;
-    margin-bottom: 3.125rem;
-    padding-top: 1.87rem;
+    margin-bottom: 6rem;
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -14,48 +13,55 @@
       rgb(68, 79, 124) 50.09%,
       rgb(55, 63, 97) 99.586%
     );
+
+    &__pic {
+      display: block;
+    }
+    
+    &__image {
+      width: 100%;
+      object-fit: cover;
+    }
+    
+    &_wrapp {
+      margin-left: 9rem;
+      // margin-left: 5rem;
+      max-width: 50rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      list-style: none;
+
+
+      &__description {
+        padding: 0rem 3rem;
+        color: rgb(255, 255, 255);
+        font-family: "Montserrat-Medium", sans-serif;
+        font-size: clamp(1rem, 0.9rem + 0.5vw, 1.5rem);
+        font-weight: 500;
+        line-height: 2.5rem;
+      }
+      
+      &__quote_bottom{
+        align-self: flex-end;
+      }
+    }
+
+    @media(max-width: 1300px) {
+      .credo__pic{
+        display: none;
+      }
+    }
+    @media(max-width: 620px) {
+      &{
+        margin-bottom: 3rem;
+      }
+      .credo_wrapp{
+        margin-left: 0rem;
+        &__quote{
+          display: none;
+        }
+      }
+    }
   }
   
-  .credo__pic {
-    display: block;
-  }
-  
-  .credo__image {
-    width: 100%;
-    object-fit: cover;
-  }
-  
-  .credo_wrapp {
-    margin-left: 9.375rem;
-    max-width: 50rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 80px;
-  }
-  
-  .credo__description {
-    position: relative;
-    color: rgb(255, 255, 255);
-    font-family: "Montserrat-Medium", sans-serif;
-    font-size: 1.5rem;
-    font-weight: 500;
-    line-height: 2.5rem;
-  }
-  
-  .credo__description::before {
-    content: url("/dist/images/icons/quotes.png");
-    display: block;
-    position: absolute;
-    top: -5rem;
-    left: -4.375rem;
-  }
-  
-  .credo__description::after {
-    content: url("/dist/images/icons/quotes.png");
-    display: block;
-    position: absolute;
-    bottom: -4.375rem;
-    right: -4.375rem;
-  }
