--- a/style/_price.scss
+++ b/style/_price.scss
@@ -3,56 +3,73 @@
 
 .price {
     margin-bottom: 6.25rem;
+
+    &__title {
+      margin-bottom: 71px;
+      color: $black-color;
+      font-family: "Montserrat-Medium", sans-serif;
+      font-size: 2.25rem;
+      font-weight: 500;
+      line-height: 1.87rem;
+    }
+
+    &_wrapp {
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-start;
+      gap: 3.75rem;
+
+      .price_card {
+        width: 320px;
+        height: 300px;
+        padding: 1.25rem 0rem;
+        padding-left: 1.87rem;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: space-around;
+        border-radius: $b-radius;
+        background-color: $lg-bg;
+  
+        &__description {
+          margin-bottom: 1.25rem;
+          color: $black-color;
+          font-family: "Montserrat-Regular", sans-serif;
+          font-size: 1.125rem;
+          font-weight: 400;
+          line-height: 1.87rem;
+        }
+        
+        &__ammount {
+          margin-bottom: 1.25rem;
+          color: $black-color;
+          font-family: "Montserrat-Regular", sans-serif;
+          font-size: 1.125rem;
+          font-weight: 400;
+          line-height: 1.87rem;
+        }
+        
+        &__btn {
+          width: 10.625rem;
+        }
+      }
+
+      @media(max-width:620px) {
+        &{
+          flex-direction: column;
+          align-items: center;
+        }
+      }
+    }
+
+
   }
   
-  .price_wrapp {
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    gap: 3.75rem;
-  }
+
   
-  .price__title {
-    margin-bottom: 71px;
-    color: $black-color;
-    font-family: "Montserrat-Medium", sans-serif;
-    font-size: 2.25rem;
-    font-weight: 500;
-    line-height: 1.87rem;
-  }
+
   
   /* grid & subgrid */
-  .price_card {
-    width: 350px;
-    height: 300px;
-    padding: 1.25rem 0rem;
-    padding-left: 1.87rem;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-around;
-    border-radius: $b-radius;
-    background-color: $lg-bg;
-  }
+
+
   
-  .price_card__description {
-    margin-bottom: 1.25rem;
-    color: $black-color;
-    font-family: "Montserrat-Regular", sans-serif;
-    font-size: 1.125rem;
-    font-weight: 400;
-    line-height: 1.87rem;
-  }
-  
-  .price_card__ammount {
-    margin-bottom: 1.25rem;
-    color: $black-color;
-    font-family: "Montserrat-Regular", sans-serif;
-    font-size: 1.125rem;
-    font-weight: 400;
-    line-height: 1.87rem;
-  }
-  
-  .price__card_btn {
-    width: 10.625rem;
-  }
