--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -1,18 +1,24 @@
 
 // index(footer)
 
-.footer_top {
+.footer{
+  &_top {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding-bottom: 3rem;
     background-color: $lg-bg;
   }
-  
-    .footer_navigate__item {
+  &_navigate{
+
+    &__list{
+      display: flex;
+      gap: 5.3rem;
+    }
+    &__item {
       list-style: none;
     }
-    .footer_navigate__link {
+    &__link {
       position: relative;
       text-decoration: none;
       color: $black-color;
@@ -21,48 +27,86 @@
       font-weight: 400;
       line-height: 1.25rem;
     }
-  .footer_phone {
-    margin-right: 8.125rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 1.25rem;
   }
 
-.footer_social {
-    margin-left: 0rem;
-  }
-  
-  .footer_navigate__list {
-    display: flex;
-    gap: 5.3rem;
-  }
-  
-  .footer_phone {
-    margin-bottom: 2.75rem;
-  }
-  
-  .footer_bottom {
+  &_bottom{
     display: flex;
     justify-content: space-around;
     align-items: center;
     margin-bottom: 1.87rem;
     padding: 1.31rem;
+
+    &__text {
+      color: $black-color;
+      font-family: "Montserrat-Regular", sans-serif;
+      font-size: 1rem;
+      font-weight: 400;
+      line-height: 1.25rem;
+    }
+    
+    &__link {
+      text-decoration: none;
+      color: $black-color;
+      font-family: "Montserrat-Regular", sans-serif;
+      font-size: 1rem;
+      font-weight: 400;
+      line-height: 1.25rem;
+    }
   }
+  &_phone{
+    margin-right: 8.125rem;
+    margin-bottom: 2.75rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1.25rem;
+    &__number{
+      text-decoration: none;
+      color: $black-color;
+    }
+  }
+
+  @media (max-width:1300px) {
+    .footer_top{
+      flex-direction: column;
+      gap:20px;
+      align-items: flex-start;
+      padding-left: 10px;
+      padding-bottom: 1rem;
+      .footer_logo{
+        margin-bottom: 10px;
+      }
+
+      .footer_phone{
+        margin-bottom: 1rem;
+      }
+    }
+
+  }
+  @media (max-width:1000px) {
+
+    .footer_navigate__list{
+      flex-direction: column;
+      gap:20px;
+    }
+
+    .footer_bottom{
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 10px;
+    }
+  }
+  @media (max-width:620px) {
+    .footer_logo_img{
+      width: 200px;
+    }
+  }
+}
+
+
   
-  .footer_bottom__text {
-    color: $black-color;
-    font-family: "Montserrat-Regular", sans-serif;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 19.1.25rem;
-  }
+
   
-  .footer_bottom__link {
-    text-decoration: none;
-    color: $black-color;
-    font-family: "Montserrat-Regular", sans-serif;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.25rem;
-  }
+  
+
+  
