--- a/css/main.css
+++ b/css/main.css
@@ -855,7 +855,6 @@ html {
   padding-top: 3.75rem;
   padding-bottom: 5rem;
 }
-
 .reviews__title {
   margin-bottom: 2.87rem;
   color: rgb(52, 52, 52);
@@ -865,21 +864,12 @@ html {
   line-height: 1.87rem;
   text-align: center;
 }
-
 .reviews_wrapp {
   max-width: 65.625rem;
   margin: 0rem auto;
   margin-bottom: 3.125rem;
 }
-
-.reviews_card__block {
-  width: 100%;
-  display: flex;
-  gap: 0.625rem;
-  margin-bottom: 2rem;
-}
-
-.review_card {
+.reviews_card {
   max-width: 21.875rem;
   min-height: 18.75rem;
   margin-left: 2px;
@@ -888,8 +878,7 @@ html {
   border-radius: 1.5625rem;
   background-color: rgb(253, 245, 223);
 }
-
-.review_card__date {
+.reviews_card__date {
   margin-bottom: 0.625rem;
   color: rgb(234, 182, 92);
   font-family: "Montserrat-Regular", sans-serif;
@@ -897,8 +886,7 @@ html {
   font-weight: 400;
   line-height: 1.87rem;
 }
-
-.review_card__title {
+.reviews_card__title {
   margin-bottom: 0.625rem;
   color: rgb(52, 52, 52);
   font-family: "Montserrat-SemiBold", sans-serif;
@@ -906,15 +894,13 @@ html {
   font-weight: 600;
   line-height: 1.87rem;
 }
-
-.review_card__description {
+.reviews_card__description {
   color: rgb(52, 52, 52);
   font-family: "Montserrat-Regular", sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.375rem;
 }
-
 .reviews__btn {
   margin: 0rem auto;
 }
