--- a/style/main.scss
+++ b/style/main.scss
@@ -9,12 +9,12 @@
 @import 'all_help';
 @import 'direct';
 @import 'price';
-@import 'help';
+@import 'index_forma';
 @import 'reviews';
 @import 'all_reviews';
 @import 'credo';
 @import 'blog';
-@import 'my_blog';
+@import 'all_blog';
 @import 'article';
 @import 'footer';
 @import 'oferta';
